tests/regression/errors/basic/syntax_error_7.csd
// Syntax error test 7 - missing semicolon
sus x drip = 7
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
